--- a/legal.html
+++ b/legal.html
@@ -16,7 +16,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/utilities.css" />
+
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
@@ -88,9 +88,9 @@
         <h3>1.4 Ontvangers</h3>
         <p>We delen gegevens enkel indien nodig met verwerkers/leveranciers (hosting, e-mail, analytics). Zij handelen volgens onze instructies en sluiten een verwerkersovereenkomst af.</p>
         <ul>
-          <li><strong>Hosting:</strong> ⚠️ vul hostingpartij in</li>
-          <li><strong>E-mail/Collaboration:</strong> ⚠️ vul provider in</li>
-          <li><strong>Analytics:</strong> Plausible (cookieloos indien geconfigureerd) of alternatief ⚠️</li>
+          <li><strong>Hosting:</strong> Netlify.com </li>
+          <li><strong>E-mail/Collaboration:</strong> Combell</li>
+          
         </ul>
 
         <h3>1.5 Internationale doorgifte</h3>
@@ -110,8 +110,7 @@
 
         <h3>1.8 Contact</h3>
         <p>E-mail: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a><br>
-           Tel: <a href="tel:+324XXXXXXXX">+32 4X XX XX XXX</a><br>
-           DPO (indien van toepassing): ⚠️ naam/e-mail</p>
+           Tel: <a href="tel:+324XXXXXXXX">+32 470713251</a><br>
       </section>
 
       <!-- COOKIES -->
@@ -195,9 +194,9 @@
         <p><strong>Buscemi Group</strong><br>
            ⚠️ Straat + nr<br>
            ⚠️ Postcode + Gemeente, België<br>
-           KBO/BTW: ⚠️ BE 0XXX.XXX.XXX<br>
+           KBO/BTW: ⚠️ BE 1027.136.562<br>
            E-mail: <a href="mailto:info@buscemigroup.be">info@buscemigroup.be</a><br>
-           Tel: <a href="tel:+324XXXXXXXX">+32 4X XX XX XXX</a></p>
+           Tel: <a href="tel:+32470713251">+32 470713251</a></p>
       </section>
 
       <p class="muted center max-w-760 mx-auto">Deze pagina is bedoeld om transparantie te bieden. Dit document vormt geen juridisch advies; stem de inhoud af op je concrete werking.</p>
