--- a/index.html
+++ b/index.html
@@ -1,223 +1,83 @@
 <!DOCTYPE html>
 <html lang="nl-BE">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Marketing & Consultancy voor ambitieuze KMO’s | Buscemi Group</title>
-  <meta name="description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
-  <link rel="canonical" href="https://buscemigroup.be/" />
-  <meta name="theme-color" content="#0d1425" />
 
-  <!-- Fonts (later eventueel self-hosten voor performance) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+<title>Buscemi Group — Marketing & Consultancy voor ambitieuze KMO’s</title>
+<meta name="description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
+<link rel="canonical" href="https://buscemigroup.be/" />
+<meta name="theme-color" content="#0e4d38" />
+<meta name="color-scheme" content="light" />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="/style.css" />
-  
 
-  <!-- Icons & PWA -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="alternate icon" href="/favicon.ico" />
-  <link rel="manifest" href="/site.webmanifest" />
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
-  <!-- Open Graph / Twitter -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://buscemigroup.be/" />
-  <meta property="og:site_name" content="Buscemi Group" />
-  <meta property="og:title" content="Marketing & Consultancy voor ambitieuze KMO’s" />
-  <meta property="og:description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
-  <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-  <meta property="og:locale" content="nl_BE" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Marketing & Consultancy voor ambitieuze KMO’s" />
-  <meta name="twitter:description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
-  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
 
-  <!-- Structured Data: Organization -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Buscemi Group",
-    "url": "https://buscemigroup.be/",
-    "logo": "https://buscemigroup.be/assets/logo.png",
-    "email": "info@buscemigroup.be"
-  }
-  </script>
+<!-- CSS -->
+<link rel="stylesheet" href="/style.css" />
 
-  <!-- Structured Data: FAQ (past bij ‘Waarom Buscemi Group?’) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type":"Question",
-        "name":"Wat doen jullie?",
-        "acceptedAnswer":{"@type":"Answer","text":"Strategisch advies en marketing onder één dak, met focus op KPI’s en rendement."}
-      },
-      {
-        "@type":"Question",
-        "name":"Hoe meten jullie succes?",
-        "acceptedAnswer":{"@type":"Answer","text":"Via vooraf gedefinieerde KPI’s met maandelijkse rapportering en concrete next steps."}
-      }
-    ]
-  }
-  </script>
 
-  <!-- Mini-styling voor skip-link fallback (veilig) -->
-  <style>
-    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
-    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
-  </style>
+<!-- Icons & PWA -->
+<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+<link rel="alternate icon" href="/favicon.ico" />
+<link rel="manifest" href="/site.webmanifest" />
+
+
+<!-- Open Graph / Twitter -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://buscemigroup.be/" />
+<meta property="og:site_name" content="Buscemi Group" />
+<meta property="og:title" content="Marketing & Consultancy voor ambitieuze KMO’s" />
+<meta property="og:description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
+<meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
+<meta property="og:locale" content="nl_BE" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Marketing & Consultancy voor ambitieuze KMO’s" />
+<meta name="twitter:description" content="Wij helpen KMO’s groeien met strategie, marketing en consultancy. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
+<meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
+
+
+<!-- Structured Data: Organization -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"Organization",
+"name":"Buscemi Group",
+"url":"https://buscemigroup.be/",
+"logo":"https://buscemigroup.be/assets/logo.png",
+"email":"info@buscemigroup.be"
+}
+</script>
+
+
+<!-- Structured Data: FAQ -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"Wat doen jullie?","acceptedAnswer":{"@type":"Answer","text":"Strategisch advies en marketing onder één dak, met focus op KPI’s en rendement."}},
+{"@type":"Question","name":"Hoe meten jullie succes?","acceptedAnswer":{"@type":"Answer","text":"Via vooraf gedefinieerde KPI’s met maandelijkse rapportering en concrete next steps."}}
+]
+}
+</script>
+
+
+<!-- Skip link (no-JS toegankelijkheid) -->
+<style>
+.skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
+.skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+</style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
+<a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-  <header class="site-header">
-    <div class="container nav">
-      <a class="brand" href="/">
-        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
-      </a>
 
-      <!-- Nav toggle: klaar voor nav.js -->
-      <button class="burger"
-              data-nav-toggle
-              aria-label="Hoofdmenu"
-              aria-expanded="false"
-              aria-controls="site-menu">☰</button>
-
-      <!-- Hoofdnavigatie -->
-      <nav id="site-menu"
-           class="nav-links"
-           data-nav-menu
-           aria-label="Hoofdnavigatie"
-           aria-hidden="true">
-        <ul class="menu">
-          <li><a href="/over.html" data-nav-link>Over</a></li>
-          <li>
-            <details class="dropdown">
-              <summary>Diensten</summary>
-              <ul class="submenu">
-                <li><a href="/diensten/marketing.html" data-nav-link>Marketing</a></li>
-                <li><a href="/diensten/consultancy.html" data-nav-link>Consultancy</a></li>
-              </ul>
-            </details>
-          </li>
-          <li><a href="/insights/index.html" data-nav-link>Insights</a></li>
-          <li><a href="/contact.html" data-nav-link>Contact</a></li>
-        </ul>
-      </nav>
-
-      <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
-    </div>
-  </header>
-
-  <main id="main">
-    <section class="hero">
-      <div class="container grid-2">
-        <div>
-          <p class="kicker">KMO-expertise • Meetbare groei</p>
-          <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
-          <p>Wij helpen KMO’s groeien met heldere strategie en efficiënte uitvoering. We combineren praktijkervaring in KMO-management met marketingexpertise — ondersteund door data en AI waar het waarde toevoegt.</p>
-          <div class="flex gap-12 flex-wrap">
-            <a class="btn" href="/contact.html">Plan kennismaking</a>
-            <a class="btn alt" href="/diensten/index.html">Onze diensten</a>
-          </div>
-
-          <div class="kpi">
-            <div class="card"><div class="val">Strategie & uitvoering</div><div class="label">Onder één dak</div></div>
-            <div class="card"><div class="val">Meetbare groei</div><div class="label">Heldere KPI’s</div></div>
-            <div class="card"><div class="val">KMO-expertise</div><div class="label">Praktisch & haalbaar</div></div>
-          </div>
-        </div>
-
-        <div class="card pad" aria-label="USP">
-          <h2 class="mt-0">Waarom Buscemi Group?</h2>
-          <p class="muted">Geen dure vrijblijvende adviezen, wel een partner die <span class="gold">meedenkt én meedoet</span>. Met AI-ondersteuning versnellen we analyses, contentproductie en optimalisaties — efficiënt en kwaliteitsvol.</p>
-          <ul class="muted">
-            <li>Strategie, creatie en performantie</li>
-            <li>Heldere rapportering en concrete next steps</li>
-            <li>Focus op rendement en operationele efficiëntie</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section class="container mt-10">
-      <h2 class="center">Wat we doen</h2>
-      <p class="sub center">Strategisch advies en marketing die meetbaar resultaat opleveren.</p>
-      <div class="grid-2 mt-24">
-        <article class="card pad tile">
-          <h3>Marketing</h3>
-          <p>Van social media tot advertenties: we bouwen een consistente merkbeleving en campagnes die presteren.</p>
-          <p class="mt-12"><a class="gold" href="/diensten/marketing.html">Lees meer →</a></p>
-        </article>
-        <article class="card pad tile">
-          <h3>Consultancy</h3>
-          <p>Kostenoptimalisatie, strategie en efficiëntie — we vertalen inzichten naar een concreet groeiplan.</p>
-          <p class="mt-12"><a class="gold" href="/diensten/consultancy.html">Lees meer →</a></p>
-        </article>
-      </div>
-    </section>
-
-    <section class="container mt-20">
-      <h2 class="center">Onze aanpak</h2>
-      <div class="grid-3 mt-24">
-        <div class="card pad tile"><h3>1. Analyse</h3><p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke doelstellingen.</p></div>
-        <div class="card pad tile"><h3>2. Plan</h3><p>Roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p></div>
-        <div class="card pad tile"><h3>3. Uitvoering</h3><p>Implementatie, testing en continue optimalisatie. Heldere rapportering.</p></div>
-      </div>
-    </section>
-
-    <section class="container mt-10">
-      <h2 class="center">Wat klanten zeggen</h2>
-      <figure class="card pad max-w-760 mx-auto my-24 text-center">
-        <blockquote>
-          <p><em>“Buscemi Group bracht structuur en focus. Binnen drie maanden zagen we duidelijke groei in leads én marge.”</em></p>
-        </blockquote>
-        <figcaption class="muted">— Naam, CEO van Bedrijf X</figcaption>
-      </figure>
-    </section>
-
-    <section class="container my-60 mx-auto">
-      <div class="cta">
-        <p><strong>Klaar om je bedrijf te laten groeien?</strong> Plan een kort kennismakingsgesprek.</p>
-        <a class="btn" href="/contact.html">Plan kennismaking</a>
-      </div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container flex justify-between items-center gap-12 flex-wrap">
-      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-      <div class="muted">
-        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
-      </div>
-      <!-- Tip: voeg KBO/BTW en eventueel adres toe in de footer -->
-    </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="/cookie.js" defer></script>
-  <script src="/js/analytics.js" defer></script>
-  <script src="/nav.js" defer></script>
-
-  <!-- Jaar in footer -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      var y = document.getElementById('year');
-      if (y) y.textContent = new Date().getFullYear();
-    });
-  </script>
-
-  <!-- No-JS fallback voor menu -->
-  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
-
-  <!-- Sticky CTA -->
-  <div class="sticky-cta"><a class="btn" href="/contact.html">Plan kennismaking</a></div>
-</body>
+<!-- ================= Header / Nav ================= -->
+<header class="site-header" role="banner">
 </html>
