--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="sub">Wij helpen KMO’s groeien met een heldere strategie en efficiënte uitvoering. We combineren praktijkervaring met marketingexpertise — ondersteund door data en AI waar het waarde toevoegt.</p>
           <div class="hero-actions">
             <a class="btn" href="/contact.html">Plan kennismaking</a>
-            <a class="btn alt" href="/diensten/">Onze diensten</a>
+            <a class="btn alt" href="/diensten/index.html">Onze diensten</a>
           </div>
         </div>
         <div class="hero-aside">
