--- a/over.html
+++ b/over.html
@@ -4,23 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Over | Buscemi Group</title>
-  <meta name="description" content="Over Buscemi Group: strategie, marketing en consultancy voor KMO’s. Praktisch advies, efficiënte uitvoering en meetbare KPI’s." />
+  <title>Over Ons | Buscemi Group</title>
+  <meta name="description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
   <link rel="canonical" href="https://buscemigroup.be/over.html" />
   <meta name="theme-color" content="#0d1425" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/utilities.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Icons & PWA -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Open Graph / Twitter -->
@@ -36,35 +34,33 @@
   <meta name="twitter:description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
   <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
 
-  <!-- Skip-link styling (veilig) -->
   <style>
     .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
     .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
+    .content-section { padding-top: clamp(3rem, 8vw, 6rem); padding-bottom: clamp(3rem, 8vw, 6rem); }
+    .content-grid { display: grid; gap: 3rem; align-items: flex-start; }
+    @media (min-width: 960px) { .content-grid { grid-template-columns: 1fr 0.8fr; } }
+    .feature-box { background: var(--bg-soft); padding: 2rem; border-radius: var(--radius); }
+    .feature-box ul { list-style: none; padding: 0; margin: 0; display: flex; flex-direction: column; gap: 1rem; }
+    .feature-box li { display: flex; align-items: flex-start; gap: 0.75rem; }
+    .feature-box svg { color: var(--gold); flex-shrink: 0; margin-top: 4px; }
   </style>
 </head>
 <body>
   <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-  <!-- Header/nav consistent met index.html -->
   <header class="site-header">
-    <div class="container nav">
+    <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-
-      <button class="burger"
-              data-nav-toggle
-              aria-label="Hoofdmenu"
-              aria-expanded="false"
-              aria-controls="site-menu">☰</button>
-
-      <nav id="site-menu"
-           class="nav-links"
-           data-nav-menu
-           aria-label="Hoofdnavigatie"
-           aria-hidden="true">
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
+        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
+      </button>
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
         <ul class="menu">
-          <li><a href="/over.html" data-nav-link>Over</a></li>
+          <li><a href="/over.html" data-nav-link class="is-active">Over</a></li>
           <li>
             <details class="dropdown">
               <summary>Diensten</summary>
@@ -78,90 +74,120 @@
           <li><a href="/contact.html" data-nav-link>Contact</a></li>
         </ul>
       </nav>
-
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
     </div>
   </header>
 
   <main id="main">
-    <!-- Subpage hero -->
     <section class="subpage-hero">
       <div class="container">
-        <h1>Over Buscemi Group</h1>
-        <p class="sub mx-auto max-w-760">Wij helpen KMO’s groeien met strategie, marketing en consultancy. Geen wollige presentaties, wel concreet advies en uitvoering met KPI’s.</p>
+        <p class="kicker">Onze Missie</p>
+        <h1>Een partner die meedenkt én meedoet</h1>
+        <p class="sub mx-auto">Wij helpen KMO’s groeien met strategie die werkt. Geen wollige presentaties, wel concreet advies en uitvoering met focus op resultaat.</p>
       </div>
     </section>
 
-    <!-- Content -->
-    <section class="container content">
-      <div class="grid-2">
+    <section class="content-section fade-in-section">
+      <div class="container content-grid">
         <article>
           <h2>Wat ons drijft</h2>
-          <p class="muted">We combineren praktijkervaring in KMO-management met marketingexpertise. Zo maken we strategieën die uitvoerbaar zijn, met meetbare impact op omzet, marge en efficiëntie.</p>
-          <ul>
-            <li>Strategie en uitvoering onder één dak</li>
-            <li>Heldere rapportering en concrete next steps</li>
-            <li>Focus op rendement en operationele efficiëntie</li>
-          </ul>
-
-          <h2 class="mt-36">Werkwijze</h2>
-          <div class="grid-3 mt-12">
-            <div class="card pad tile"><h3>1. Analyse</h3><p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke doelstellingen.</p></div>
-            <div class="card pad tile"><h3>2. Plan</h3><p>Roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p></div>
-            <div class="card pad tile"><h3>3. Uitvoering</h3><p>Implementatie, testing en continue optimalisatie. Heldere rapportering.</p></div>
-          </div>
+          <p class="sub">We combineren praktijkervaring in KMO-management met diepgaande marketingexpertise. Zo ontwikkelen we strategieën die niet alleen ambitieus, maar vooral ook uitvoerbaar zijn, met een meetbare impact op uw omzet, marge en efficiëntie.</p>
+          <p>Onze aanpak is gebouwd op transparantie en samenwerking. We worden een verlengstuk van uw team om doelen te realiseren die er echt toe doen.</p>
         </article>
-
-        <aside class="card pad">
-          <h2 class="mt-0">Feiten & cijfers</h2>
-          <ul class="muted">
-            <li>Sectorfocus: KMO’s (B2B en B2C)</li>
-            <li>Diensten: strategie, marketing, consultancy</li>
-            <li>Tools: data & AI waar het waarde toevoegt</li>
+        <aside class="feature-box">
+          <h3 style="margin-top: 0;">Onze focus</h3>
+          <ul>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg>
+              <span>Strategie en uitvoering onder één dak</span>
+            </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>
+              <span>Heldere rapportering en concrete next steps</span>
+            </li>
+            <li>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg>
+              <span>Focus op rendement en operationele efficiëntie</span>
+            </li>
           </ul>
-
-          <h3 class="mt-24">Waarmee kunnen we jou helpen?</h3>
-          <p class="muted">Van kostenoptimalisatie en go-to-market tot performance marketing en content: we bouwen een plan dat werkt voor jouw realiteit.</p>
-          <p class="mt-12"><a class="btn" href="/contact.html">Plan kennismaking</a></p>
         </aside>
       </div>
     </section>
 
-    <!-- CTA -->
-    <section class="container my-60 mx-auto">
-      <div class="cta">
-        <p><strong>Klaar om je bedrijf te laten groeien?</strong> Plan een kort kennismakingsgesprek.</p>
-        <a class="btn" href="/contact.html">Plan kennismaking</a>
+    <section class="process-section fade-in-section">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">Onze Werkwijze</p>
+          <h2>Een heldere aanpak in 3 stappen</h2>
+        </div>
+        <div class="process-grid">
+          <div class="card process-card">
+            <div class="process-number">01</div>
+            <h3>Analyse</h3>
+            <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+          </div>
+          <div class="card process-card">
+            <div class="process-number">02</div>
+            <h3>Plan</h3>
+            <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+          </div>
+          <div class="card process-card">
+            <div class="process-number">03</div>
+            <h3>Uitvoering</h3>
+            <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta-section fade-in-section">
+      <div class="container">
+        <div class="cta-card">
+          <h2>Klaar om uw bedrijf te laten groeien?</h2>
+          <p>Plan een vrijblijvend kennismakingsgesprek en ontdek wat we voor u kunnen betekenen.</p>
+          <a class="btn" href="/contact.html">Plan kennismaking</a>
+        </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container flex justify-between items-center gap-12 flex-wrap">
-      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-      <div class="muted">
-        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+      <div class="container footer-container">
+        <div class="footer-brand">
+          <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+          <p>Marketing & Consultancy voor KMO's.</p>
+        </div>
+        <div class="footer-links">
+          <a href="/legal.html">Privacy</a>
+          <a href="/legal.html#cookies">Cookies</a>
+          <a href="/legal.html#voorwaarden">Voorwaarden</a>
+        </div>
+        <div class="footer-info">
+          <p>&copy; <span id="year"></span> Buscemi Group</p>
+          <p>BE 1027.136.562</p>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- Scripts -->
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
   <script src="/nav.js" defer></script>
-
-  <!-- Jaar in footer -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var y = document.getElementById('year');
-      if (y) y.textContent = new Date().getFullYear();
+      const yearEl = document.getElementById('year');
+      if (yearEl) yearEl.textContent = new Date().getFullYear();
+      const sections = document.querySelectorAll('.fade-in-section');
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('is-visible');
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.1 });
+      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-
-  <!-- No-JS fallback voor menu -->
-  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
-
-  <!-- Sticky CTA -->
-  <div class="sticky-cta"><a class="btn" href="/contact.html">Plan kennismaking</a></div>
+  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
