--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       <div class="container hero-container">
         <div class="hero-content">
           <p class="kicker">KMO-expertise • Meetbare groei</p>
-          <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
-          <p class="sub">Wij helpen KMO’s groeien met een heldere strategie en efficiënte uitvoering. We combineren praktijkervaring met marketingexpertise — ondersteund door data en AI waar het waarde toevoegt.</p>
+          <h1>Marketing & Consultancy voor <span class="accent">KMO’s</span></h1>
+          <p class="sub">Wij helpen KMO’s groeien met een heldere strategie en efficiënte uitvoering. We combineren praktijkervaring met marketingexpertise.</p>
           <div class="hero-actions">
             <a class="btn" href="/contact.html">Plan kennismaking</a>
-            <a class="btn alt" href="/diensten/index.html">Onze diensten</a>
+            <a class="btn alt" href="Website/diensten/index.html">Onze diensten</a>
           </div>
         </div>
         <div class="hero-aside">
@@ -179,8 +179,8 @@
             <p>“Buscemi Group bracht structuur en focus in onze aanpak. Binnen drie maanden zagen we een duidelijke groei in kwalitatieve leads én een betere marge.”</p>
           </blockquote>
           <figcaption>
-            <span class="testimonial-name">Naam Klant</span>
-            <span class="testimonial-role">CEO van Bedrijf X</span>
+            <span class="testimonial-name">Iris Van Hauwenis</span>
+            <span class="testimonial-role">CEO van Studio Flowerpower </span>
           </figcaption>
         </figure>
       </div>
