--- a/diensten/marketing.html
+++ b/diensten/marketing.html
@@ -3,54 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Marketing voor KMO’s | Buscemi Group</title>
   <meta name="description" content="Resultaatgerichte marketing voor KMO’s: van strategie en content tot social ads, SEO/SEA en e-mail. Consistente groei met duidelijke KPI’s." />
   <link rel="canonical" href="https://buscemigroup.be/diensten/marketing.html" />
-  <meta name="theme-color" content="#0d1425" />
-
-  <!-- Fonts -->
+  <meta name="theme-color" content="#0a3d2c" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
-
-  <!-- Icons & PWA -->
   <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
-
-  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buscemigroup.be/diensten/marketing.html" />
   <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:title" content="Marketing voor KMO’s | Buscemi Group" />
   <meta property="og:description" content="Van strategie en content tot social ads, SEO/SEA en e-mail. Consistente groei met duidelijke KPI’s." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-
-  <style>
-    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
-    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
-    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
-    .services-overview-grid { display: grid; gap: 1.5rem; }
-    @media (min-width: 768px) { .services-overview-grid { grid-template-columns: repeat(2, 1fr); } }
-    @media (min-width: 1024px) { .services-overview-grid { grid-template-columns: repeat(3, 1fr); } }
-    .service-detail-card { padding: 1.5rem; text-align: center; }
-  </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
-
   <header class="site-header">
     <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
-        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
-      </button>
-      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
@@ -67,6 +43,7 @@
         </ul>
       </nav>
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu"></button>
     </div>
   </header>
 
@@ -75,69 +52,57 @@
       <div class="container">
         <p class="kicker">Marketing</p>
         <h1>Marketing die <span class="accent">consequent resultaat</span> oplevert</h1>
-        <p class="sub mx-auto">Strategie, creatie en performance onder één dak. We bouwen een consistente merkbeleving en campagnes die converteren — met KPI’s die tellen.</p>
+        <p class="sub">Strategie, creatie en performance onder één dak. We bouwen een consistente merkbeleving en campagnes die converteren — met KPI’s die tellen.</p>
       </div>
     </section>
 
-    <section class="services-overview-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">Onze Expertise</p>
-                <h2>Wat we voor u doen</h2>
-            </div>
-            <div class="services-overview-grid">
-                <div class="card service-detail-card"><h3>Strategie & Positionering</h3><p>Doelgroep, propositie en kanalen scherp krijgen.</p></div>
-                <div class="card service-detail-card"><h3>Content & Creatie</h3><p>Copy, visuals en video die het merk dragen.</p></div>
-                <div class="card service-detail-card"><h3>Social & Advertising</h3><p>Meta, LinkedIn, Google Ads campagnes op conversie.</p></div>
-                <div class="card service-detail-card"><h3>SEO & SEA</h3><p>Techniek, content en autoriteit voor online vindbaarheid.</p></div>
-                <div class="card service-detail-card"><h3>E-mail & Automations</h3><p>Nurture-flows, segmentatie en lead-scoring.</p></div>
-                <div class="card service-detail-card"><h3>Analytics & KPI’s</h3><p>Dashboarding, A/B-testen en heldere rapportage.</p></div>
-            </div>
+    <section class="services-overview-section section">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">Onze Expertise</p>
+          <h2>Wat we voor u doen</h2>
         </div>
+        <div class="services-overview-grid">
+          <div class="card service-detail-card"><h3>Strategie & Positionering</h3><p>Doelgroep, propositie en kanalen scherp krijgen.</p></div>
+          <div class="card service-detail-card"><h3>Content & Creatie</h3><p>Copy, visuals en video die het merk dragen.</p></div>
+          <div class="card service-detail-card"><h3>Social & Advertising</h3><p>Meta, LinkedIn, Google Ads campagnes op conversie.</p></div>
+          <div class="card service-detail-card"><h3>SEO & SEA</h3><p>Techniek, content en autoriteit voor online vindbaarheid.</p></div>
+          <div class="card service-detail-card"><h3>E-mail & Automations</h3><p>Nurture-flows, segmentatie en lead-scoring.</p></div>
+          <div class="card service-detail-card"><h3>Analytics & KPI’s</h3><p>Dashboarding, A/B-testen en heldere rapportage.</p></div>
+        </div>
+      </div>
     </section>
 
-    <section class="process-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">Onze Aanpak</p>
-                <h2>Van Plan tot Optimalisatie</h2>
-            </div>
-            <div class="process-grid">
-                <div class="card process-card"><div class="process-number">01</div><h3>Plan</h3><p>Campagneroadmap per kwartaal met duidelijke doelstellingen en budget.</p></div>
-                <div class="card process-card"><div class="process-number">02</div><h3>Productie</h3><p>Content, advertenties en landingspagina’s met correcte tracking.</p></div>
-                <div class="card process-card"><div class="process-number">03</div><h3>Optimalisatie</h3><p>Wekelijkse iteraties en een maandrapport met heldere learnings.</p></div>
-            </div>
+    <section class="process-section section surface">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">Onze Aanpak</p>
+          <h2>Van Plan tot Optimalisatie</h2>
         </div>
+        <div class="process-grid">
+          <div class="card"><div class="process-number">01</div><h3>Plan</h3><p>Campagneroadmap per kwartaal met duidelijke doelstellingen en budget.</p></div>
+          <div class="card"><div class="process-number">02</div><h3>Productie</h3><p>Content, advertenties en landingspagina’s met correcte tracking.</p></div>
+          <div class="card"><div class="process-number">03</div><h3>Optimalisatie</h3><p>Wekelijkse iteraties en een maandrapport met heldere learnings.</p></div>
+        </div>
+      </div>
     </section>
 
-     <section class="faq-section fade-in-section">
-        <div class="container">
-            <div class="section-header">
-                <p class="kicker">FAQ</p>
-                <h2>Veelgestelde vragen</h2>
-            </div>
-            <div class="faq-grid">
-                <div class="card faq-card">
-                    <h3>Werken jullie met bestaande teams?</h3>
-                    <p>Zeker. We versterken uw interne marketing en werken samen met vaste partners waar nodig.</p>
-                </div>
-                <div class="card faq-card">
-                    <h3>Kunnen jullie alles meten?</h3>
-                    <p>We zetten correcte tracking op (GA4/GTM) en maken een dashboard met de KPI’s die ertoe doen.</p>
-                </div>
-                <div class="card faq-card">
-                    <h3>Doen jullie ook branding?</h3>
-                    <p>Ja, van brand story tot visuele guidelines. We koppelen branding altijd aan performance-doelen.</p>
-                </div>
-                <div class="card faq-card">
-                    <h3>Is AI betrokken?</h3>
-                    <p>We gebruiken AI waar het waarde toevoegt (analyses, contentvarianten), altijd met menselijke kwaliteitscontrole.</p>
-                </div>
-            </div>
+    <section class="faq-section section">
+      <div class="container">
+        <div class="section-header">
+          <p class="kicker">FAQ</p>
+          <h2>Veelgestelde vragen</h2>
         </div>
+        <div class="faq-grid">
+          <div class="card"><h3>Werken jullie met bestaande teams?</h3><p>Zeker. We versterken uw interne marketing en werken samen met vaste partners waar nodig.</p></div>
+          <div class="card"><h3>Kunnen jullie alles meten?</h3><p>We zetten correcte tracking op (GA4/GTM) en maken een dashboard met de KPI’s die ertoe doen.</p></div>
+          <div class="card"><h3>Doen jullie ook branding?</h3><p>Ja, van brand story tot visuele guidelines. We koppelen branding altijd aan performance-doelen.</p></div>
+          <div class="card"><h3>Is AI betrokken?</h3><p>We gebruiken AI waar het waarde toevoegt (analyses, contentvarianten), altijd met menselijke kwaliteitscontrole.</p></div>
+        </div>
+      </div>
     </section>
-    
-    <section class="cta-section fade-in-section">
+
+    <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
           <h2>Klaar om uw marketing op te schalen?</h2>
@@ -149,22 +114,22 @@
   </main>
 
   <footer class="site-footer">
-      <div class="container footer-container">
-        <div class="footer-brand">
-          <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
-          <p>Marketing & Consultancy voor KMO's.</p>
-        </div>
-        <div class="footer-links">
-          <a href="/legal.html">Privacy</a>
-          <a href="/legal.html#cookies">Cookies</a>
-          <a href="/legal.html#voorwaarden">Voorwaarden</a>
-        </div>
-        <div class="footer-info">
-          <p>&copy; <span id="year"></span> Buscemi Group</p>
-          <p>BE 1027.136.562</p>
-        </div>
+    <div class="container footer-container">
+      <div class="footer-brand">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+        <p>Marketing & Consultancy voor KMO's.</p>
       </div>
-    </footer>
+      <div class="footer-links">
+        <a href="/legal.html">Privacy</a>
+        <a href="/legal.html#cookies">Cookies</a>
+        <a href="/legal.html#voorwaarden">Voorwaarden</a>
+      </div>
+      <div class="footer-info">
+        <p>&copy; <span id="year"></span> Buscemi Group</p>
+        <p>BE 1027.136.562</p>
+      </div>
+    </div>
+  </footer>
 
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
@@ -173,18 +138,7 @@
     document.addEventListener('DOMContentLoaded', function () {
       const yearEl = document.getElementById('year');
       if (yearEl) yearEl.textContent = new Date().getFullYear();
-      const sections = document.querySelectorAll('.fade-in-section');
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('is-visible');
-            observer.unobserve(entry.target);
-          }
-        });
-      }, { threshold: 0.1 });
-      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
