--- a/over.html
+++ b/over.html
@@ -3,62 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Over Ons | Buscemi Group</title>
   <meta name="description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
   <link rel="canonical" href="https://buscemigroup.be/over.html" />
-  <meta name="theme-color" content="#0d1425" />
-
-  <!-- Fonts -->
+  <meta name="theme-color" content="#0a3d2c" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Icons & PWA -->
   <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
-
-  <!-- Open Graph / Twitter -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://buscemigroup.be/over.html" />
   <meta property="og:site_name" content="Buscemi Group" />
   <meta property="og:title" content="Over Buscemi Group" />
   <meta property="og:description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-  <meta property="og:locale" content="nl_BE" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Over Buscemi Group" />
-  <meta name="twitter:description" content="Strategie, marketing en consultancy voor KMO’s. Praktisch, efficiënt en met heldere KPI’s." />
-  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
-
-  <style>
-    .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
-    .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
-    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
-    .content-section { padding-top: clamp(3rem, 8vw, 6rem); padding-bottom: clamp(3rem, 8vw, 6rem); }
-    .content-grid { display: grid; gap: 3rem; align-items: flex-start; }
-    @media (min-width: 960px) { .content-grid { grid-template-columns: 1fr 0.8fr; } }
-    .feature-box { background: var(--bg-soft); padding: 2rem; border-radius: var(--radius); }
-    .feature-box ul { list-style: none; padding: 0; margin: 0; display: flex; flex-direction: column; gap: 1rem; }
-    .feature-box li { display: flex; align-items: flex-start; gap: 0.75rem; }
-    .feature-box svg { color: var(--gold); flex-shrink: 0; margin-top: 4px; }
-  </style>
 </head>
 <body>
-  <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
-
   <header class="site-header">
     <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
-        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
-      </button>
-      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link class="is-active">Over</a></li>
           <li>
@@ -75,6 +43,7 @@
         </ul>
       </nav>
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu"></button>
     </div>
   </header>
 
@@ -83,55 +52,41 @@
       <div class="container">
         <p class="kicker">Onze Missie</p>
         <h1>Een partner die meedenkt én meedoet</h1>
-        <p class="sub mx-auto">Wij helpen KMO’s groeien met strategie die werkt. Geen wollige presentaties, wel concreet advies en uitvoering met focus op resultaat.</p>
+        <p class="sub">Wij helpen KMO’s groeien met strategie die werkt. Geen wollige presentaties, wel concreet advies en uitvoering met focus op resultaat.</p>
       </div>
     </section>
 
-    <section class="content-section fade-in-section">
-      <div class="container content-grid">
-        <article>
-          <h2>Wat ons drijft</h2>
-          <p class="sub">We combineren praktijkervaring in KMO-management met diepgaande marketingexpertise. Zo ontwikkelen we strategieën die niet alleen ambitieus, maar vooral ook uitvoerbaar zijn, met een meetbare impact op uw omzet, marge en efficiëntie.</p>
-          <p>Onze aanpak is gebouwd op transparantie en samenwerking. We worden een verlengstuk van uw team om doelen te realiseren die er echt toe doen.</p>
-        </article>
-        <aside class="feature-box">
-          <h3 style="margin-top: 0;">Onze focus</h3>
-          <ul>
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg>
-              <span>Strategie en uitvoering onder één dak</span>
-            </li>
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg>
-              <span>Heldere rapportering en concrete next steps</span>
-            </li>
-            <li>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg>
-              <span>Focus op rendement en operationele efficiëntie</span>
-            </li>
-          </ul>
-        </aside>
+    <section class="content-section section">
+      <div class="container" style="max-width: 900px;">
+        <h2>Wat ons drijft</h2>
+        <p class="lead">We combineren praktijkervaring in KMO-management met diepgaande marketingexpertise. Zo ontwikkelen we strategieën die niet alleen ambitieus, maar vooral ook uitvoerbaar zijn, met een meetbare impact op uw omzet, marge en efficiëntie.</p>
+        <p>Onze aanpak is gebouwd op transparantie en samenwerking. We worden een verlengstuk van uw team om doelen te realiseren die er echt toe doen. We luisteren, analyseren en handelen — altijd met uw bedrijfsdoelstellingen als leidraad.</p>
+        <ul class="feature-list" style="margin-top: 3rem; justify-content: flex-start; text-align: left; gap: 1rem 2rem; flex-direction: column; align-items: flex-start;">
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="m9 12 2 2 4-4"/></svg> <span>Strategie en uitvoering onder één dak</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20V10"/><path d="M18 20V4"/><path d="M6 20v-4"/></svg> <span>Heldere rapportering en concrete next steps</span></li>
+            <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17.28 9.03a5 5 0 1 0-9.56 0"/><path d="M12 12a5 5 0 0 0-5 5v3h10v-3a5 5 0 0 0-5-5z"/></svg> <span>Focus op rendement en operationele efficiëntie</span></li>
+        </ul>
       </div>
     </section>
 
-    <section class="process-section fade-in-section">
+    <section class="process-section section surface">
       <div class="container">
         <div class="section-header">
           <p class="kicker">Onze Werkwijze</p>
           <h2>Een heldere aanpak in 3 stappen</h2>
         </div>
         <div class="process-grid">
-          <div class="card process-card">
+          <div class="card">
             <div class="process-number">01</div>
             <h3>Analyse</h3>
             <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
           </div>
-          <div class="card process-card">
+          <div class="card">
             <div class="process-number">02</div>
             <h3>Plan</h3>
             <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
           </div>
-          <div class="card process-card">
+          <div class="card">
             <div class="process-number">03</div>
             <h3>Uitvoering</h3>
             <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
@@ -140,7 +95,7 @@
       </div>
     </section>
 
-    <section class="cta-section fade-in-section">
+    <section class="cta-section section">
       <div class="container">
         <div class="cta-card">
           <h2>Klaar om uw bedrijf te laten groeien?</h2>
@@ -176,18 +131,7 @@
     document.addEventListener('DOMContentLoaded', function () {
       const yearEl = document.getElementById('year');
       if (yearEl) yearEl.textContent = new Date().getFullYear();
-      const sections = document.querySelectorAll('.fade-in-section');
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('is-visible');
-            observer.unobserve(entry.target);
-          }
-        });
-      }, { threshold: 0.1 });
-      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
